[gd_scene load_steps=3 format=3 uid="uid://cryxopea0cyfg"]

[ext_resource type="Script" path="res://Scenes/punching_fist_l.gd" id="1_q1tmq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0fl45"]
radius = 18.0278

[node name="PunchingFist" type="RigidBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_q1tmq")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0fl45")

[node name="Sprite2D" type="Sprite2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
